branches/wip/Archive/a8117c99dae90e44bbc0c7e741f45043-433f808ed6b95a686aeb169da4e46d97/output
+ g++ -std=c++11 -O3 -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:23:7: error: cannot declare variable ‘c’ to be of abstract type ‘C’
     C c;
       ^
main.cpp:14:7: note:   because the following virtual functions are pure within ‘C’:
 class C : public A, public B {
       ^
main.cpp:3:13: note: 	virtual int A::methodA()
 virtual int methodA() = 0;
             ^
main.cpp:4:13: note: 	virtual int A::methodB()
 virtual int methodB() = 0;
             ^
